# quant-simulator

./: .env.example  API_EXPLORER_TEST_REPORT.md  API_EXPLORER_TOOLING_SDLC.md  CHANGELOG-Week21-22.md  DATA_ARCHITECTURE_ALIGNMENT_REPORT.md  DATA_ARCHITECTURE_SPECIFICATION.md  DATA_AUTHENTICITY_AUDIT.md  DEEP_MATHEMATICAL_ANALYSIS.md  Dockerfile  FACTSET_SETUP.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  MATHEMATICAL_EVALUATION_REPORT.md  NETWORK_PROTECTION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  POSTGRES_PASSWORD_RESET.md  PRODUCTION_DEPLOYMENT_PLAN.md  PRODUCTION_ENHANCEMENT_ROADMAP.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_ENHANCEMENT_SDLC.md  PRODUCTION_SECRETS_PLAN.md  PROVIDERS_STATUS.md  PYPI_PUBLICATION_GUIDE.md  PYPI_READY_SUMMARY.md  Q-FIN_COMPONENT_COMPARISON.md  Q-FIN_CRITICAL_ISSUES.md  Q-FIN_DEEP_SCAN_REPORT.md  Q-FIN_FINAL_REPORT.md  QUANTITATIVE_FINANCE_MEGA_PROJECT_SDLC.md  README.md  README_PYPI.md  SDK_README.md  SDLC_COMPLIANCE_EVALUATION.md  STREAMLIT_CLOUD_DEPLOYMENT.md  alembic.ini  check_latex_env.ps1  debug_jwt.py  docker-compose.extended.yml  docker-compose.prod.yml  (+31 more)
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
3D-Market-Regime-State-Machine/3D-Market-Regime-State-Machine/: main.py  regime_model.py  visualization.py
Algorithmic-Trading-Battle-Simulator/Algorithmic-Trading-Battle-Simulator/: backtester.py  main.py  strategies.py
Alpha-Decay-Regime-Shift-Engine/Alpha-Decay-Regime-Shift-Engine/: streamlit_app.py
Black-Scholes-Visual-Explainer/Black-Scholes-Visual-Explainer/: app.py  black_scholes.py
Buy-vs-Sell-Signal-Generator/Buy-vs-Sell-Signal-Generator/: main.py
Correlation-Contagion-Shock-Simulator/Correlation-Contagion-Shock-Simulator/: app.py
Correlation-Matrix-Evolution/Correlation-Matrix-Evolution/: correlation_matrix_evolution.py
Dynamic-Efficient-Frontier-Lab/Dynamic-Efficient-Frontier-Lab/: app.py
GaussianCookbook-main/GaussianCookbook/: MATHEMATICAL_SPECIFICATIONS.md  README.md  README_COMPLETE.md  REFINEMENT_ROADMAP.md  brownian-bridge.html  complete_demo.py  demo_refactored.py  final_validation.py  quick_demo.py  setup.py
Liquidity-Heatmap-Engine/Liquidity-Heatmap-Engine/: main.py  orderbook_simulator.py  visualization.py
Liquidity-Pressure-Destruction-Simulator/Liquidity-Pressure-Destruction-Simulator/: 3d_liquidity_pressure_destruction_simulator.py
Market-Impact-Execution-Cost-Simulator/Market-Impact-Execution-Cost-Simulator/: app.py  execution_simulator.py  impact_models.py  metrics.py  visualization.py
Market-Reflexivity-Crash-Cascade-Simulator/Market-Reflexivity-Crash-Cascade-Simulator/: app.py
Monte-Carlo-Wealth-Simulator/Monte-Carlo-Wealth-Simulator/: monte_carlo_wealth_simulator.py
Moving-Average-Crossover-Strategy/Moving-Average-Crossover-Strategy/: main.py
Order-Book-Liquidity-Simulation-Engine (1)/Order-Book-Liquidity-Simulation-Engine/: app.py  orderbook_engine.py  simulation.py  visualization.py
Order-Book-Liquidity-Simulation-Engine/Order-Book-Liquidity-Simulation-Engine/: metrics.py
Portfolio-Diversification-Analyze/Portfolio-Diversification-Analyze/: diversification.py
Portfolio-Fragility-Hidden-Leverage-Map/Portfolio-Fragility-Hidden-Leverage-Map/: streamlit_app.py
Q-Fin/QFin/: __init__.py
Smart-Portfolio-Optimizer/Smart-Portfolio-Optimizer/: main.py  optimizer.py
Stock-Price-Trend-Analyze/Stock-Price-Trend-Analyze/: trend_analyzer.py
Stock-Volatility-Comparison-Tool/Stock-Volatility-Comparison-Tool/: volatility.py
Systemic-Risk-Contagion-Network-Engine/Systemic-Risk-Contagion-Network-Engine/: app.py
Tail-Risk-Distribution-Morph-Engine/Tail-Risk-Distribution-Morph-Engine/: app.py
Volatility-Shockwave-Simulator/Volatility-Shockwave-Simulator/: main.py  pricing.py  simulator.py
Volatility-Surface-Builder/Volatility-Surface-Builder/: black_scholes.py  iv_solver.py  main.py
Volatility-Surface-Evolution-Engine/Volatility-Surface-Evolution-Engine/: app.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_timescaledb_hypertables.py
config/postgres/: pg_hba.conf  postgresql.conf
correlation-Regime-Tectonic-Shift-Engine/correlation-Regime-Tectonic-Shift-Engine/: 3d_correlation_regime_tectonic_shift_engine.py
deploy/: aws-deploy.sh  azure-deploy.sh  gcp-deploy.sh
docs/: API_EXPLORER_SDLC.md  API_REAL_DATA_ENDPOINTS.py  DATA_INFRASTRUCTURE_GUIDE.md  DATA_PROVIDERS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LIQUIDITY_DASHBOARD_CALIBRATION.md  TRADER_STRESS_MONITOR_GUIDE.md  UAT_PERFORMANCE_INTEGRATION_GUIDE.md  architecture.md  conf.py  index.md  load-testing.md  monitoring-alerting.md  oncall-runbook.md  performance-monitoring-dashboard.md  phased-rollout-plan.md  production-deployment.md  production-readiness-checklist.md  secrets-management.md  security-hardening-checklist.md
docs/api/: README.md
docs/guides/: user_guide.md
docs/mathematical_foundations/: index.md  ito_calculus.md  (+4 more)
monitoring/: prometheus.yml
pages/: 10_Market_Analysis.py  11_Trading_Signals.py  12_Liquidity.py  13_Systemic_Risk.py  14_Trader_Stress_Monitor.py  15_Testing.py  15_Testing_original.py  16_UAT_Dashboard.py  17_API_Explorer.py  18_Settings.py  1_Portfolio.py  1_📈_Portfolio.py  2_Risk.py  2_⚠️_Risk.py  3_Options.py  3_📊_Options.py  4_Market_Regime.py  4_🎯_Market_Regime.py  5_Macro.py  5_📉_Macro.py  6_Volatility_Surface.py  6_🌊_Volatility_Surface.py  7_Backtesting.py  8_Advanced_Analytics.py  8_📊_Advanced_Analytics.py  9_Data_Management.py  9_UAT_Dashboard.py
postman/: quantlib-pro-api.postman_collection.json
quantlib_api/: auth.py
quantlib_cli/: formatters.py
quantlib_pro/: __init__.py  cli.py  sdk.py
scripts/: PRODUCTION_SECRETS_README.md  backup.sh  benchmark-api-performance.ps1  docker-secrets.ps1  fix_emoji.py  migrate.py  monitoring-manager.ps1  network-management.ps1  performance_benchmark.py  production-database.ps1  production-deploy.ps1  production-secrets.ps1  publish-to-pypi.ps1  quick-performance-test.ps1  reset-postgres-password.ps1  restore.sh  safe-docker-cleanup.ps1  secrets-manager.ps1  start-optimized-api.ps1
(+138 files in other folders)
